--- a/CSS/Index.css
+++ b/CSS/Index.css
@@ -10,12 +10,13 @@ body {
 p {
 
     font-family: 'Pathway Gothic One', sans-serif;
+    font-size: 20px;
     margin: 1vh 4vh;
 }
 
 h2 {
     font-family: "Bebas";
-    font-size: 4em;
+    font-size: 2em;
     margin: 3vh 4vh;
     margin-bottom: 1vh;
 }
@@ -23,8 +24,9 @@ h2 {
 h3 {
     margin: 1vh 4vh;
     font-family: 'Pathway Gothic One', sans-serif;
+    font-size: 25px;
     text-align: center;
-    color: rgb(248, 46, 40)
+    color: rgb(248, 46, 40);
 }
 
 header {
