--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -21,8 +21,9 @@ h2 {
     margin-bottom: 1vh;
 }
 h3{
+    font-family: 'Pathway Gothic One', sans-serif;
     margin: 0 4vh;
-}de
+}
 
 h4{
     font-family: 'Pathway Gothic One', sans-serif;
