--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -108,3 +108,31 @@ input[type=submit] {
 .kaart{
     margin: 4vh;
 }
+
+.social{
+        text-align: center;
+    margin-top: 70px;    
+}
+.fa {
+    padding: 15px;
+    font-size: 30px;
+    width: 20px;
+    border-radius: 100px;
+    text-align: center;
+    text-decoration: none;
+    margin: 10px 10px;
+}
+
+.fa-facebook {
+    background: red;
+    color: white;
+}
+
+.fa-twitter {
+    background: red;
+    color: white;
+}
+.fa-instagram {
+    background: red;
+    color: white;
+}
