--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -1,14 +1,15 @@
 @font-face {
     font-family: "Bebas";
-    src: url(/Font/Bebas-Regular.tff);
+    src: url(../Font/Bebas-Regular.tff);
 }
 
 body {
     margin: 0;
 }
-a{
+
+a {
     text-decoration: none;
-    color:red;
+    color: red;
 }
 
 
@@ -20,12 +21,13 @@ h2 {
     margin: 3vh 4vh;
     margin-bottom: 1vh;
 }
-h3{
+
+h3 {
     font-family: 'Pathway Gothic One', sans-serif;
     margin: 0 4vh;
 }
 
-h4{
+h4 {
     font-family: 'Pathway Gothic One', sans-serif;
     margin: 0;
     margin-top: 10px;
@@ -50,13 +52,16 @@ header img {
     float: right;
     margin: 3vh 4vh;
 }
-.mail{
+
+.mail {
     font-size: 20px;
     margin-top: 2vh;
     color: red;
 }
 
-input[type=text], select, textarea {
+input[type=text],
+select,
+textarea {
     width: 90%;
     padding: 12px;
     border: 1px solid #ccc;
@@ -76,7 +81,9 @@ input[type=submit] {
     cursor: pointer;
 }
 
-input[type=text], select, textarea {
+input[type=text],
+select,
+textarea {
     width: 100%;
     padding: 12px;
     border: 1px solid #ccc;
@@ -97,40 +104,16 @@ input[type=submit] {
 }
 
 
-.formulier  {
+.formulier {
     font-family: 'Pathway Gothic One', sans-serif;
     margin: 4vh;
 }
 
-.kaart{
+.kaart {
     margin: 4vh;
 }
 
-.social{
-        text-align: center;
-    margin-top: 70px;    
-}
-.fa {
-    padding: 15px;
-    font-size: 30px;
-    width: 20px;
-    border-radius: 100px;
+.social {
     text-align: center;
-    text-decoration: none;
-    margin: 10px 10px;
+    margin-top: 70px;
 }
-
-.fa-facebook {
-    background: red;
-    color: white;
-}
-
-.fa-twitter {
-    background: red;
-    color: white;
-}
-.fa-instagram {
-    background: red;
-    color: white;
-}
-
