--- a/CSS/scanner.css
+++ b/CSS/scanner.css
@@ -1,22 +1,33 @@
+@font-face {
+    font-family: "Bebas";
+    src: url(../Font/Bebas-regular.ttf);
+}
 *{
     text-align: center;
-}
-body{
-    height: 100vh;
     margin: 0;
+    width: 100%;
 }
+
+h1{
+    font-family: "Bebas";
+    font-size: 4em;
+    position: absolute;
+}
+
+
 #scanner{
-    width: 75%;
     position: absolute;
     z-index: 1;
-    margin: 40vh 40vw;
+    width: 100%;
+    margin-top: 22vh; 
 }
 
 video{
-    height: 50vh;
-    margin-top: 35vh
+    height: 100vh;
 }
-
-div {
-    margin-bottom: 16px;
+/* CLEARFIX */
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
 }
