--- a/CSS/nav.css
+++ b/CSS/nav.css
@@ -1,7 +1,7 @@
 
 @font-face {
     font-family: "Bebas";
-    src: url(../Font/Bebas-regular.ttf);
+    src: url(/Font/Bebas-regular.ttf);
 }
 
 h3{
