--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Bebas";
-    src: url(Font/Bebas-Regular.tff);
+    src: url(../Font/Bebas-Regular.ttf);
 }
 
 body {
