--- a/CSS/scanner.css
+++ b/CSS/scanner.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Bebas";
-    src: url(../Font/Bebas-regular.ttf);
+    src: url(../Font/Bebas-Regular.ttf);
 }
 *{
     text-align: center;
