--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -29,6 +29,7 @@ h3 {
 
 h4 {
     font-family: 'Pathway Gothic One', sans-serif;
+    font-size: 20px;
     margin: 0;
     margin-top: 10px;
 }
@@ -73,6 +74,7 @@ textarea {
 }
 
 input[type=submit] {
+    font-size: 16px;
     background-color: #6e45c7;
     color: white;
     padding: 12px 20px;
@@ -99,7 +101,7 @@ input[type=submit] {
     background-color: white;
     color: black;
     border: 1px solid rgb(248, 46, 40);
-    padding: 5px 25px;
+    padding: 5px 30px;
     border-radius: 30px;
 }
 
