--- a/CSS/scanner.css
+++ b/CSS/scanner.css
@@ -21,10 +21,6 @@ h1{
     margin-top: 1vh
 }
 
-video{
-    height: 110vh;
-}
-
 #scanner{
     position: absolute;
     z-index: 1;
@@ -34,13 +30,6 @@ video{
     margin-top: 14vh; 
 }
 
-#detectedCode{
-    position: absolute;
-    z-index: 1;
-    padding-top: 80vh;
-    font-family: "Bebas";
-    font-size: 3em;
-}
 
 #back-button{
     width: 100%;
@@ -53,6 +42,15 @@ video{
     margin-top: 80vh;
     left:  42.4vw;   
 }
+
+.blackBar{
+    background-color: black;
+    height: 30vw;
+    position: absolute;
+    z-index: 0.99;
+    margin-top: 78vh
+}
+
 /* CLEARFIX */
 .clearfix::after {
     content: "";
