--- a/CSS/scanner.css
+++ b/CSS/scanner.css
@@ -30,6 +30,13 @@ h1{
     margin-top: 14vh; 
 }
 
+.blackBar{
+    background-color: black;
+    height: 300px;
+    position: absolute;
+    z-index: 1;
+    margin-top: 73vh
+}
 
 #back-button{
     width: 100%;
