--- a/CSS/scanner.css
+++ b/CSS/scanner.css
@@ -8,6 +8,10 @@
     width: 100%;
 }
 
+body{
+    background-color: black;
+}
+
 a{
     text-decoration: none;
 }
@@ -30,11 +34,6 @@ h1{
     margin-top: 14vh; 
 }
 
-.blackBar{
-    background-color: black;
-    height: 20vh;
-}
-
 #back-button{
     width: 100%;
 }
@@ -43,7 +42,7 @@ h1{
     width: 150px;
     position: absolute;
     z-index: 1;
-    margin-top: 75vh;
+    margin-top: 10vw;   
     left:  42.4vw;   
 }
 
