--- a/CSS/slide.css
+++ b/CSS/slide.css
@@ -104,4 +104,33 @@ slideshow-knoppen-drie{
 .dot:hover{
     background-color: #ff0000;
 }
+/*================================================================
+                                LOGO                       
+================================================================*/
+footer{
+    width: 100%;
+    background-color: red;
+    color: white;
+    padding: 20px;
+    margin-top: 50px;
+    padding-top: 40px;
+    padding-bottom: 70px;
+}
+footer a{
+    color: white;
+    margin-left: 50px;
+    font-size: 25px;
+    font-family: Bebas;
+}
 
+footer img{
+    width: 6%;
+    float: right;
+    margin-right: 50px;
+}
+
+.logo{
+    width: 25%;
+    float: left;
+    margin-left: 50px;
+}
