--- a/CSS/Index.css
+++ b/CSS/Index.css
@@ -48,4 +48,31 @@ header img {
 .programma h2 {
     color: rgb(248, 46, 40)
 }
+footer{
+    width: 100%;
+    background-color: red;
+    color: white;
+    padding: 20px;
+    margin-top: 50px;
+    padding-top: 40px;
+    padding-bottom: 70px;
+}
+footer a{
+    color: white;
+    margin-left: 50px;
+    font-size: 25px;
+    font-family: Bebas;
+}
+
+footer img{
+    width: 6%;
+    float: right;
+    margin-right: 50px;
+}
+
+.logo{
+    width: 25%;
+    float: left;
+    margin-left: 50px;
+}
 
