--- a/CSS/slide.css
+++ b/CSS/slide.css
@@ -27,43 +27,36 @@ SLIDESHOWS
     width: 100%;
 }
 .slideshow-een {
+    -webkit-overflow-scrolling: touch;
     margin: 0;
     width: 100%;
     scroll-snap-type: x mandatory;
-    overflow-x: auto;
+    overflow-x: scroll;
     white-space: nowrap;
 }
 
-.mySlidesTwee {
-    display: inline-block;
-    width: 90vw;
-    margin: 0% 5% 0% 5%;
-}
 .slideshow-twee img {
-    vertical-align: middle;
     width: 100%;
 }
 .slideshow-twee {
+    -webkit-overflow-scrolling: touch;
     margin: 0;
-    overflow: auto;
+    width: 100%;
+    scroll-snap-type: x mandatory;
+    overflow-x: scroll;
     white-space: nowrap;
-    display: none; 
 }
 
-.mySlidesDrie {
-    display: inline-block;
-    width: 90vw;
-    margin: 0% 5% 0% 5%;
-}
 .slideshow-drie img {
-    vertical-align: middle;
     width: 100%;
 }
 .slideshow-drie {
+    -webkit-overflow-scrolling: touch;
     margin: 0;
-    overflow: auto;
+    width: 100%;
+    scroll-snap-type: x mandatory;
+    overflow-x: scroll;
     white-space: nowrap;
-    display: none; 
 }
 
 /*================================================================
@@ -112,33 +105,4 @@ slideshow-knoppen-drie{
 .dot:hover{
     background-color: #ff0000;
 }
-/*================================================================
-                                LOGO                       
-================================================================*/
-footer{
-    width: 100%;
-    background-color: red;
-    color: white;
-    padding: 20px;
-    margin-top: 50px;
-    padding-top: 40px;
-    padding-bottom: 70px;
-}
-footer a{
-    color: white;
-    margin-left: 50px;
-    font-size: 25px;
-    font-family: Bebas;
-}
 
-footer img{
-    width: 6%;
-    float: right;
-    margin-right: 50px;
-}
-
-.logo{
-    width: 25%;
-    float: left;
-    margin-left: 50px;
-}
