--- a/CSS/scanner.css
+++ b/CSS/scanner.css
@@ -18,20 +18,20 @@ a{
 
 h1{
     font-family: "Bebas";
+    color: rgb(248, 46, 40);
     font-size: 8em;
     position: absolute;
     z-index: 1;
     padding-top: 1vh;
-    margin-top: 1vh
+    margin-top: 1vh;
 }
-
 #scanner{
     position: absolute;
     z-index: 1;
     width: 75%;
     margin-left: 12.5%;
     margin-right: 12.5%;
-    margin-top: 14vh; 
+    margin-top: 18vh; 
 }
 
 #back-button{
@@ -39,11 +39,11 @@ h1{
 }
 
 #back{
-    width: 150px;
+    width: 120px;
     position: absolute;
-    z-index: 1;
-    margin-top: 10vw;   
-    left:  42.4vw;   
+    top: 80%;
+    z-index: 1;   
+    left:  44vw;   
 }
 
 /* CLEARFIX */
