--- a/CSS/newnav.css
+++ b/CSS/newnav.css
@@ -23,11 +23,10 @@ label .menu {
 label .hamburger {
     position: absolute;
     top: 185px;
-    left: 60px;
-    width: 50px;
+    left: 20px;
+    width: 100px;
     height: 5px;
-    background: #000;
-    color:red;
+    background: red;
     display: block;
     -webkit-transform-origin: center;
     transform-origin: center;
@@ -40,7 +39,7 @@ label .hamburger:after, label .hamburger:before {
     display: block;
     width: 100%;
     height: 100%;
-    background: #000;
+    background: red;
 }
 label .hamburger:before {
     top: -10px;
@@ -108,7 +107,7 @@ ul{
     font-size: 70px;
     color: red;
     text-align: center;
-    margin-top: 40px;
+    margin-top: -100px;
     list-style-type: none;
 }
 
