--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -11,49 +11,22 @@ a {
     text-decoration: none;
     color: red;
 }
-
-h2 {
-    font-family: "Bebas";
-    font-size: 90px;
-    margin: 3vh 4vh;
-    margin-bottom: 1vh;
+.naam{
+    color: black;
+    text-align: left;
+    margin-bottom: 0;
 }
-
-h3 {
-    font-family: 'Pathway Gothic One', sans-serif;
-    font-size: 60px;
-    margin: 0 4vh;
-}
-
 h4 {
-    font-family: 'Pathway Gothic One', sans-serif;
-    font-size: 60px;
     margin: 0;
     margin-top: 40px;
 }
-
-p {
-    font-family: 'Pathway Gothic One', sans-serif;
-    font-size: 50px;
-    margin: 0vh 4vh;
+#bericht{
+    margin: 0;
 }
-
-header {
-    display: inline-block;
-    width: 100%
+#button{
+    margin: 0;
 }
-
-header img {
-    margin-left: 4vh;
-    margin-top: 2vh;
-}
-
-#menu {
-    float: right;
-    margin: 3vh 4vh;
-}
-
-.mail {
+.mailadres {
     margin-top: 2vh;
     color: red;
 }
@@ -62,7 +35,6 @@ input[type=text],
 select,
 textarea {
     width: 90%;
-    font-size: 40px;
     padding: 12px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -70,17 +42,17 @@ textarea {
     margin-top: 6px;
     margin-bottom: 16px;
     resize: vertical;
+    font-size: 30px;
 }
 
 input[type=submit] {
-   
+   font-size: 30px;
     background-color: #6e45c7;
     color: white;
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    font-size: 45px;
 }
 
 input[type=text],
@@ -141,3 +113,4 @@ footer img{
     float: left;
     margin-left: 50px;
 }
+
