--- a/CSS/slide.css
+++ b/CSS/slide.css
@@ -19,7 +19,7 @@ SLIDESHOWS
 .mySlides {
     display: inline-block;
     width: 90vw;
-    margin: 0% 5% 0% 5%;
+    margin: 3% 5%;
     scroll-snap-align: center;
     scroll-snap-stop: always;
 }
@@ -59,6 +59,31 @@ SLIDESHOWS
     white-space: nowrap;
 }
 
+::-webkit-scrollbar {
+    width: 12px ;
+ }
+
+ /* Track */
+::-webkit-scrollbar-track {
+   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+   -webkit-border-radius: 10px;
+   border-radius: 20px;
+ }
+
+ /* Handle */
+ ::-webkit-scrollbar-thumb {
+   -webkit-border-radius: 10px;
+   border-radius: 10px;
+   background: #41617D; 
+   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+ }
+
+.eerste, .tweede, .derde{
+    -webkit-transform:rotateX(180deg); /* Safari and Chrome */
+}
+.mySlides{
+    -webkit-transform:rotateX(180deg); /* Safari and Chrome */
+}
 /*================================================================
 
 ================================================================*/
@@ -75,20 +100,19 @@ h1, h2, p {
     font-family: Bebas;
 }
 
+.slideshow-een,.slideshow-twee,.slideshow-drie{
+    text-align: left;
+}
+
+.eerste,.tweede,.derde{
+    text-align: center;
+}
+
 .knoppenBachelor .bachelorEen{
     background-color: #ff0000;
     color: white;
 }
 
-slideshow-knoppen-een{
-    display: none;
-}
-slideshow-knoppen-twee{
-    display: none;
-}
-slideshow-knoppen-drie{
-    display: none;
-}
 .dot {
     cursor: pointer;
     margin:0% 2% 2%;
