--- a/CSS/Index.css
+++ b/CSS/Index.css
@@ -54,7 +54,7 @@ header img {
     color: rgb(248, 46, 40)
 }
 footer{
-
+    height: auto;
     background-color: red;
     color: white;
     padding: 20px;
