--- a/CSS/slide.css
+++ b/CSS/slide.css
@@ -15,7 +15,7 @@ SLIDESHOWS
     float: right;
     display: none;
 }
-
+/*gebasseerd op https://css-tricks.com/practical-css-scroll-snapping/*/
 .mySlides {
     display: inline-block;
     width: 90vw;
@@ -63,6 +63,7 @@ SLIDESHOWS
     width: 12px ;
  }
 
+/*scrollbar visible https://stackoverflow.com/questions/22907777/make-scrollbar-visible-in-mobile-browsers en https://www.outsystems.com/forums/discussion/27148/what-if-we-want-the-scroll-option-on-top-of-the-table-like-it-has-at-bottom/*/
  /* Track */
 ::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
@@ -113,20 +114,4 @@ h1, h2, p {
     color: white;
 }
 
-.dot {
-    cursor: pointer;
-    margin:0% 2% 2%;
-    height: 30px;
-    width: 30px;
-    text-align: center;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-}
-
-.dot:active,
-.dot:hover{
-    background-color: #ff0000;
-}
 
