--- a/CSS/Index.css
+++ b/CSS/Index.css
@@ -6,7 +6,6 @@
 body {
     margin: 0;
 }
-
 banner{
     height:20px;
 
@@ -41,7 +40,7 @@ h3 {
 
 header {
     display: inline-block;
-    width: 100%
+    width: 100%;
 }
 
 header img {
